--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,13 @@ services:
     environment:
       - DATABASE_URL=postgresql://admin:whatpay123@postgres:5432/whatpay
       - REDIS_URL=redis://redis:6379
+      - JWT_SECRET=whatpay_super_secret_2024
     depends_on:
       - postgres
       - redis
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
 
 volumes:
   postgres_data:
